# Hokusai-Agent

./: .gitignore  .mcp.json  AGENTS.md  IRI_CHECKLIST.md  PORTING.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
data/: hokusai_guide.md
plugins/hokusai/.claude-plugin/: plugin.json
plugins/hokusai/.codex-plugin/: plugin.json
plugins/hokusai/skills/hokusai-configuring/: SKILL.md
plugins/hokusai/skills/hokusai-demo/: SKILL.md
plugins/hokusai/skills/hokusai-monitoring-jobs/: SKILL.md
plugins/hokusai/skills/hokusai-reference/: SKILL.md
plugins/hokusai/skills/hokusai-submitting-jobs/: SKILL.md
server/: pyproject.toml  run.sh
server/hokusai_mcp/: compute.py  config.py  docs_server.py  doctor.py  hpc_server.py  ingest.py  middleware.py  models.py
server/hokusai_mcp/compute/: slurm.py
server/hokusai_mcp/data/: hokusai_config.json
server/hokusai_mcp/data/docs_index/: chunks.json  embeddings.npy
server/hokusai_mcp/rag/: embed.py  ingest.py  store.py
server/tests/: smoke.py
skills/configuring/: SKILL.md
skills/demo/: SKILL.md
skills/hokusai-configuring/: SKILL.md
skills/hokusai-demo/: SKILL.md
skills/hokusai-reference/: SKILL.md
skills/monitoring-jobs/: SKILL.md
skills/submitting-jobs/: SKILL.md
