[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hokusai-mcp"
version = "0.3.0"
description = "MCP plugin for HOKUSAI BigWaterfall2 (HBW2), the RIKEN R-CCS CPU-first Slurm cluster — submit and monitor jobs, manage files, and search the machine guide. A thin skin over hpc-agent-core."
requires-python = ">=3.10"
dependencies = [
    # Pinned to a compatible range so a future core release can't silently
    # change what users install. 0.4.0 is current at time of writing; widen
    # the ceiling deliberately after verifying against a newer core.
    "hpc-agent-core>=0.4,<0.5",
]

[project.scripts]
hokusai-hpc-mcp = "hokusai_mcp.hpc_server:main"
hokusai-docs-mcp = "hokusai_mcp.docs_server:main"
hokusai-doctor = "hokusai_mcp.doctor:main"

[tool.setuptools.packages.find]
include = ["hokusai_mcp*"]

[tool.setuptools.package-data]
# Ship the guide (.md), the static facts (.json), and the pre-built docs
# index. Missing the .md glob here would silently ship no guide — doctor's
# check_docs_guide_bundled catches that, but list it correctly up front.
hokusai_mcp = [
    "data/*.md",
    "data/*.json",
    "data/docs_index/*.json",
    "data/docs_index/*.npy",
]
